k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-cutter
  labels:
    app: video-cutter
spec:
  type: LoadBalancer
  selector:
    app: video-cutter
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
